Fix contrast in light mode and weird header effect in dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,13 +20,13 @@ body {
   @apply font-sans antialiased;
   @apply flex flex-col;
   @apply bg-stone-100 dark:bg-stone-900;
-  @apply text-black/50 dark:text-white/75;
+  @apply text-black/60 dark:text-white/75;
 }
 
 header {
   @apply fixed top-0 left-0 right-0 z-50 py-5;
   @apply bg-stone-100/75 dark:bg-stone-900/25;
-  @apply backdrop-blur-sm saturate-200;
+  @apply backdrop-blur-sm;
 }
 
 main {
